case 226 - Fix carousel collapse.

--- a/css/item-browsebar_style.css
+++ b/css/item-browsebar_style.css
@@ -191,6 +191,7 @@
   background-repeat: repeat-x;
   height: 29px;
   width: 100%;
+  z-index: 5;
 }
 
 #browsebar-bar .browsebar-bar {
